Worked on dashboard templating

--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
   "author": "Rashed Doha",
   "license": "MIT",
   "dependencies": {
-      "bcryptjs": "*",
-      "body-parser": "*",
-      "connect-flash": "*",
-      "cookie-parser": "^1.4.1",
-      "express": "*",
-      "express-validator": "*",
-      "express-messages": "*",
-      "express-session": "*",
-      "mongodb": "*",
-      "mongoose": "*",
-      "passport": "*",
-      "passport-http": "*",
-      "passport-local": "*"
+    "bcryptjs": "*",
+    "body-parser": "*",
+    "connect-flash": "*",
+    "cookie-parser": "^1.4.1",
+    "express": "*",
+    "express-messages": "*",
+    "express-session": "*",
+    "express-validator": "*",
+    "mongodb": "*",
+    "mongoose": "*",
+    "passport": "*",
+    "passport-http": "*",
+    "passport-local": "*",
+    "pug": "^2.0.0-rc.3"
+  },
+  "devDependencies": {
+    "morgan": "^1.8.2"
   }
 }
