--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "bcryptjs": "*",
     "body-parser": "*",
+    "cloudinary": "^1.9.0",
     "connect-flash": "*",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "^1.4.1",
     "express": "*",
     "express-messages": "*",
@@ -19,6 +21,7 @@
     "express-validator": "*",
     "mongodb": "*",
     "mongoose": "*",
+    "multiparty": "^4.1.3",
     "passport": "*",
     "passport-http": "*",
     "passport-local": "*",
